2026-01-21  Karl Berry  <karl@freefriends.org>

	* kpse-pkgs.m4 (KPSE_TEXK_PKGS): add xdvipsk.

2025-11-30  Karl Berry  <karl@freefriends.org>

	* kpse-common.m4 (KPSE_MSG_WARN): explain termination due to
	--disable-missing.

2025-07-22  Karl Berry  <karl@freefriends.org>

	* kpse-setup.m4: add tldbg debugging lines to help understand
	when the recursion happens and when it's skipped.

2025-01-15  J. Neusch\"afer  <j.ne@posteo.net>

	configure support for system luajit library.
	* kpse-luajit-flags.m4 (KPSE_LUAJIT_FLAGS): just [lt], not [lt tree].
	(KPSE_LUAJIT_OPTIONS, KPSE_LUAJIT_SYSTEM_FLAGS): new defuns.
	* kpse-pkgs.m4 (KPSE_ALL_SYSTEM_FLAGS): include 
	KPSE_LUAJIT_SYSTEM_FLAGS.
	https://tug.org/pipermail/tex-live/2025-January/051043.html

2024-04-28  Karl Berry  <karl@freefriends.org>

	* kpse-common.m4 (KPSE_BASIC): 

2024-04-18  Karl Berry  <karl@freefriends.org>

	* kpse-visibility.m4 (_KPSE_VISIBILITY_FLAGS): avoid testing or
	including -fvisibility-inlines-hidden for C. From Luigi, mail of
	12 Apr 2024 06:26:23.

2024-02-01  Luigi Scarso  <luigi.scarso@gmail.com>

	* kpse-pkgs.m4 (kpse_libs_pkgs): add mpfi (new subdir).
	(KPSE_ALL_SYSTEM_FLAGS): add AC_REQUIRE([KPSE_MPFI_SYSTEM_FLAGS]).
	* kpse-mpfi-flags.m4: new file.

2023-12-21  Karl Berry  <karl@freefriends.org>

	* kpse-common.m4 (KPSE_COMMON): remove AC_HEADER_STDC, an obsolete
	no-op as of autoconf 2.70.

2023-06-18  Karl Berry  <karl@freefriends.org>

	* kpse-common.m4 (KPSE_BASIC, KPSE_COMMON): more tldbg.
	(KPSE_COMMON): call AM_PROG_AR before LT_INIT here to avoid warning:
	  configure.ac:46: warning: LT_INIT was called before AM_PROG_AR
	(_KPSE_USE_LIBTOOL): instead of here.

2023-03-01  Karl Berry  <karl@freefriends.org>

	* kpse-common.m4 (_KPSE_USE_LIBTOOL): tldbg output libtool
	version; include AM_PROG_AR for dvisvgm.

2023-02-25  Werner Fink  <werner@suse.de>

	* kpse-potrace-flags.m4 (KPSE_POTRACE_SYSTEM_FLAGS): define
	using _KPSE_LIB_FLAGS_SYSTEM since there is no .pc file,